fix z-index bug on safari

--- a/docs/src/.vuepress/theme/styles/style.scss
+++ b/docs/src/.vuepress/theme/styles/style.scss
@@ -92,6 +92,7 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
+	transform: translateZ(10px); // fix z-index issue on Safari: https://stackoverflow.com/a/58490946
 }
 .bg-glitch {
 	opacity: 0.6;
